--- a/src/styles/Profile.css
+++ b/src/styles/Profile.css
@@ -22,6 +22,12 @@ h1 {
     border-radius: 10px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
+.profile-info {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+}
 .profile-avatar img{
     width: 100px;
     height: 100px;
@@ -53,4 +59,19 @@ h1 {
     background: rgba(181, 181, 181, 1);
     border-radius: 10px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+#password_form {
+    position: fixed;
+    top: 30%;
+    left: 40%;
+    background: white;
+    display: none;
+    z-index: 999;
+    border-radius: 5px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+#password_form .title-form {
+    margin-top: 10px;
+    font-weight: bold;
+    font-size: 20px;
 }
