add get video from server

--- a/src/styles/DashBoard.css
+++ b/src/styles/DashBoard.css
@@ -1,8 +1,6 @@
-.dashboard {
-}
 .header_dashboard 
 {
-    padding-left: 100px;
+    margin-left: 50px;
     font-weight: bold;
 }
 .face-detector {
